# BeerBowling

./: .gitignore  manage.py  mypy.ini  pyproject.toml
.github/workflows/: django.yml  react.yml
beerbowling/: asgi.py  urls.py  wsgi.py
beerbowling/games/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
beerbowling/games/migrations/: 0001_initial.py  0002_gameevent_game.py  0003_auto_20200627_1103.py
beerbowling/players/: apps.py  models.py
beerbowling/players/migrations/: 0001_initial.py
beerbowling/settings/: base.py  development.py  production.py
frontend/: .eslintrc.js  package-lock.json  package.json  snowpack.config.json
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/dto/: JWTTokenDTO.ts  UserDTO.ts
frontend/src/http/: login.ts  request.ts
frontend/src/modules/: LoginContext.tsx  LoginManager.tsx
frontend/src/routes/: Home.tsx  Login.tsx
frontend/src/utils/: TypeGuards.tsx  decodeObject.ts
