[tool.poetry]
name = "beerbowling"
version = "0.1.0"
description = ""
authors = ["Nickolaj Jepsen <nickolaj1177@gmail.com>"]

[tool.poetry.scripts]
django = "manage:main"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
mypy = "^0.770"
django-stubs = "^1.5.0"
djangorestframework = "^3.11.0"
djangorestframework-stubs = "^1.2.0"
djangorestframework-simplejwt = {git = "https://github.com/SimpleJWT/django-rest-framework-simplejwt.git"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
